# prisma_mock_client

./: pyproject.toml
mock_client/: client.py  schema_parser.py
test/: client_test.py
test/prisma/: schema.prisma
