[tool.poetry]
name = "prisma-mock-client"
version = "0.1.0"
description = ""
authors = ["Nhsdkk <38581029+Nhsdkk@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
prisma = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
